[package]
name = "balthazar"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17"
avian2d = "0.4"
rand = "0.8"
bevy_ecs_tiled = { version = "0.9", features = ["debug", "avian", "user_properties"] }
bevy_light_2d = "0.8"


[patch.crates-io]
bevy_ecs_tiled = { git = "https://github.com/adrien-bon/bevy_ecs_tiled.git", branch = "dev" }

# Optimize for faster dev builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3